Changes in Shorewall 4.4.21 Beta 3

1)  Shorewall-init can now save/restore ipsets.

Changes in Shorewall 4.4.21 Beta 2

1)  Implement the 'update' command.

Changes in Shorewall 4.4.21 Beta 1

1)  IPSET support in Shorewall6.

2)  Make AUTOMAKE follow CONFIG_PATH

3)  Default values for action parameters.

4)  Parameterize Drop and Reject actions.

Changes in Shorewall 4.4.20.1

1)  Corrected FSF address.

2)  Don't modify configfiles/shorewall.conf &
    configfiles/shorewall6.conf.

3)  Change 'plain' default.

Changes in Shorewall 4.4.20 Final

1)  Set /proc/sys/net/bridge/bridge_nf_call_ip6?tables.

2)  Add 'I' and 'NI' STATEs in secmarks.

Changes in Shorewall 4.4.20 RC 1

1)  Update release documents.

2)  Annotate config files with manpage info.

3)  Don't place negative numbers in IPMARK masks.

4)  Fix IPv6 getparams

Changes in Shorewall 4.4.20 Beta 5

1)  Rename Auditing Macros

2)  Add -T option to compile and check

3)  Implement ROUTEBACK_LOG_LEVEL and ROUTEBACK_AUDIT

Changes in Shorewall 4.4.20 Beta 4

1)  Smarten up the tc devnum algorithm.

2)  Implement LEGACY_FASTSTART option.

3)  Add a '-c' option to the restart command.

4)  /sbin/shorewall and /sbin/shorewall6 unification.

5)  Remove dependence on 'make'

Changes in Shorewall 4.4.20 Beta 3

1)  Add auditing support.

Changes in Shorewall 4.4.20 Beta 2

1)  Use 'my' for module globals unless variable is exported.

2)  Merged fixes from 4.4.19.4.

3)  Implemented ACCOUNTING_TABLE

4)  Implemented NFLOG accounting action.

5)  Implement 'whitelist' option.

Changes in Shorewall 4.4.20 Beta 1

1)  Apply Togan's patch for installation flexibility.

2)  Disallow degenerate entry in tcpri.

3)  More fixes to LIBEXEC/TCPRI

4)  Don't allow filters and tcrules to refer to non-leaf classes.

Changes in Shorewall 4.4.19.2

1)  Restore the ability to have IPSET names in the ORIGINAL DEST column
    of a DNAT or REDIRECT rule.

2)  Correct several complex TC issues reported by Mr Dash4.
