@@ -11,4 +11,5 @@
 
 COMMENT Late DNS Replies
 
-DROP	-	-	udp	-	53
+DEFAULT DROP
+PARAM	-	-	udp	-	53
