@@ -11,4 +11,5 @@
 
 COMMENT UPnP
 
-DROP	-	-	udp	1900
+DEFAULT DROP
+PARAM	-	-	udp	1900
