@@ -2,6 +2,10 @@ Changes in Shorewall 4.4.21 Beta 3
 
 1)  Shorewall-init can now save/restore ipsets.
 
+2)  Correct handling of DEFAULTS in non-action contexts.
+
+3)  Rename read_action_param and change signature.
+
 Changes in Shorewall 4.4.21 Beta 2
 
 1)  Implement the 'update' command.
